Fix : other styles issue

--- a/templates/game.html
+++ b/templates/game.html
@@ -158,12 +158,12 @@
 				width: 255px;
 			}
 
-			#wrap2x2Cube>div>div>div {
+			.face-element {
 				width: 25px;
 				height: 25px;
 			}
 
-			#wrap2x2Cube>div>div {
+			.face {
 				width: 62px;
 				height: 62px;
 			}
@@ -430,6 +430,11 @@
 			document.getElementById("loader").style.display = "flex";
 			document.getElementById("loaderText").style.display = "table";
 		}
+
+		function paintCube() {
+			
+		}
+
 	</script>
 </body>
 
