--- a/templates/game.html
+++ b/templates/game.html
@@ -424,7 +424,7 @@
 					<div class="face-element" id="23">
 					</div>
 					<div class="face-element" id="22">
-					<div>
+					</div>
 					<div class="face-element" id="21">
 					</div>
 					<div class="face-element" id="20">
